# mj_rock_generator

./: .gitignore  .setup.py.swp  README.md  applying_texture.py  arena.py  inspiration.txt  pyproject.toml  rock.py  rock_model.py  scene.py  setup.py  voronoi.py
mj_rock_generator/: __init__.py  rock.py  voronoi.py
